5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1578_1332.log
== TEST (2019-03-27 18:18:47) 
-- CODE:
aresta =
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:22:51) 
-- CODE:
aresta = 5
area = (3/2)*(3**3/1)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
1012.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:23:16) 
-- CODE:
aresta = 5
area = (3/2)*(3**3/1)*(aresta**2)
 
print(round(area, 8))
-- OUTPUT:
1012.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:23:40) 
-- CODE:
aresta = 5
area = (3/2)*(3**3/1)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
1012.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:23:44) 
-- CODE:
aresta = 5
area = (3/2)*(3**3/1)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.169596
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1012.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:24:16) 
-- CODE:
aresta = 5
area = ((3/2)*(3**3/1)*(aresta**2))
 
print(round(area, 2))
-- OUTPUT:
1012.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:27:35) 
-- CODE:
aresta = 5
area = ((3/2)*(3**3/1)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
1012.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:28:21) 
-- CODE:
aresta = 5
area = ((3/2)*(3**1/3)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:28:52) 
-- CODE:
aresta = 5
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:28:56) 
-- CODE:
aresta = 5
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:29:00) 
-- CODE:
aresta = 5
area = ((3/2)*(3**0.5)*(aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.130269
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
